--- a/css/style.css
+++ b/css/style.css
@@ -13,36 +13,34 @@
 .header-box{
     background-image: url(../images/lama.webp);
     background-size: cover;
-    height: 100vh;
-    width: 100%;
-    top: 0;
-    left: 0;    
-    }
+    height: 100%;
+    width: 100%;  
+}
 
 .header{
-   padding-bottom: 450px;
+   padding-bottom: 400px;
 }
 
 .bar{
     height: 70px;
     width: 100%;
     background-color: #bbccd4;
+    padding-right: 5%;
+    padding-left: 5%;
 }
 
 
 .header .title{
-    width: 55%;
     float: left;
-    padding-left: 5%;
     padding-top: 15px;
     color: #3C860E;
     text-transform: capitalize;
 }
 
 .header .nav{
-    width: 45%;
-    float: left;
+    float: right;
     list-style: none;
+    padding-top: 6px;
 }
 
 .header .nav li{
@@ -54,13 +52,13 @@
     color: #1162e6;
     padding: 20px 40px;
     display: block;
-    font-size:17px ;   
+    font-size:19px ;   
 }
                                      /*home section*/
 .sec {
    background-color:#DEE6EF;
    width:100%;
-   height: 1294px;
+   height: auto;
    padding-top: 50px;  
 }
 
@@ -70,7 +68,7 @@
 .sec-box3,
 .sec-box4{
     height:246px;
-    width: 1800px;
+    width: 98%;
     border: 1.5px solid #DEE6EF;
     margin-bottom: 30px;
     margin-left: 15px;
@@ -82,7 +80,8 @@
 .sec-box2 .image2,
 .sec-box3 .image3,
 .sec-box4 .image4{
-    width: 460px;
+    width: 25%;
+
 }
 
 .image1 img,
@@ -91,9 +90,8 @@
 .image4 img{
     float: left;
     width: 100%;
-    height : auto;
-    padding: 0 30px;
-    padding-bottom: 30px;
+    padding: 0 25px;
+    
 }
 
 .paragraph1,
@@ -113,19 +111,25 @@
     padding: 20px;
     
 }
-.footer{
+
+.footer img{
     width: 100%;
-    height: 70px;
-    background-image: url(../images/websiteColors.jpg);
+    height: 70px;       
+}
+
+.responsive {
+    width: 100%;
+    height: auto;
+ }
+
+.text{   
     margin-top: 100px;
     text-align: center;
     text-transform: uppercase;
     color: #1162e6;
     font-size:50px;
-    padding: 8px;
-
-    
 }
+
 
 
 
